# japanese-codepoints

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
benches/: codepoints_bench.rs
examples/: ascii_example.rs  codepoints_example.rs  comprehensive_validation_example.rs  jisx0201_example.rs  jisx0208_example.rs  jisx0208kanji_example.rs  jisx0213kanji_example.rs
src/: codepoints.rs  jisx0201.rs  jisx0208.rs  jisx0208kanji.rs  jisx0213kanji.rs  lib.rs  validation.rs
src/data/: ascii.rs  jisx0201.rs  jisx0208.rs  jisx0208kanji.rs  jisx0213kanji.rs  mod.rs  tests.rs
