[package]
name = "japanese-codepoints"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Yang <ywjno.dev@gmail.com>"]
description = "A high-performance Rust library for Japanese character validation and code point handling based on JIS standards"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshisuproject/japanese-codepoints"
readme = "README.md"
keywords = ["japanese", "jis", "validation", "codepoints", "character-set"]
categories = ["text-processing", "internationalization"]
homepage = "https://github.com/yoshisuproject/japanese-codepoints"
documentation = "https://docs.rs/japanese-codepoints"

[dependencies]

[dev-dependencies]
criterion = "0.7"

[features]
default = ["codepoints"]
codepoints = []
codepoints-jisx0201 = ["codepoints"]
codepoints-jisx0208 = ["codepoints"]
codepoints-jisx0208kanji = ["codepoints"]
codepoints-jisx0213kanji = ["codepoints"]
full = [
    "codepoints",
    "codepoints-jisx0201",
    "codepoints-jisx0208",
    "codepoints-jisx0208kanji",
    "codepoints-jisx0213kanji"
]

[[bench]]
name = "codepoints_bench"
harness = false

[[example]]
name = "jisx0201_example"
required-features = ["codepoints-jisx0201"]

[[example]]
name = "jisx0208_example"
required-features = ["codepoints-jisx0208"]

[[example]]
name = "jisx0208kanji_example"
required-features = ["codepoints-jisx0208kanji"]

[[example]]
name = "jisx0213kanji_example"
required-features = ["codepoints-jisx0213kanji"]

[[example]]
name = "comprehensive_validation_example"
required-features = ["codepoints-jisx0208", "codepoints-jisx0201"]
